# eigen-filestorage

./: .gitignore  Cargo.toml  README.md  README.zh_CN.md
src/: lib.rs
src/core/: mod.rs
src/local/: local_filestorage.rs  mod.rs
src/s3/: mod.rs  s3_filestorage.rs
